# industrial-anomaly-detection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.api  LICENSE  Makefile  PLANO.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/features/: features.parquet
docs/: DATASET.md  MODEL_CARD.md
results/: X_test.npy  ae_model.joblib  comparison.parquet  full_dataset_scores.parquet  iforest_metrics.json  iforest_model.joblib  lof_model.joblib  meta_test.parquet  ocsvm_model.joblib  threshold.json  y_test.npy
scripts/: generate_synthetic_dataset.py
src/: api.py  cli.py  compare.py  dashboard.py  dataset.py  drift.py  evaluate.py  explain.py  features.py  ingest.py  precompute.py
src/models/: autoencoder.py  base.py  iforest.py  lof.py  ocsvm.py
tests/: test_api.py  test_autoencoder.py  test_base.py  test_compare.py  test_dashboard.py  test_dashboard_helpers.py  test_dataset.py  test_docker.py  test_drift.py  test_evaluate.py  test_explain.py  test_features.py  test_iforest.py  test_ingest.py  test_lof.py  test_ocsvm.py  test_pipeline.py  test_precompute.py
