[project]
name = "industrial-anomaly-detection"
version = "0.1.0"
description = "Unsupervised anomaly detection on industrial time-series — Isolation Forest, OC-SVM, AutoEncoder, SHAP, bootstrap CI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Renan Miqueloti", email = "renanmiqueloti@gmail.com" }]
keywords = [
  "anomaly-detection",
  "time-series",
  "isolation-forest",
  "autoencoder",
  "shap",
  "vibration",
  "bearing",
  "predictive-maintenance",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "torch>=2.2",
  "shap>=0.46",
  "matplotlib>=3.10.9",
  "streamlit>=1.36",
  "plotly>=5.22",
  "pyarrow>=16",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pyyaml>=6",
  "httpx>=0.27",
  "websockets>=12",
]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
]

[project.urls]
Homepage = "https://github.com/RenanMiqueloti/industrial-anomaly-detection"
Issues = "https://github.com/RenanMiqueloti/industrial-anomaly-detection/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "data*", "results*"]

# Streamlit Cloud usa Poetry quando há pyproject.toml — esta seção
# diz a Poetry onde estão os módulos (espelha o setuptools find acima).
[tool.poetry]
packages = [{ include = "src" }]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src"]
# Exclude entry-point / UI glue from coverage; they're exercised by integration not unit tests.
omit = [
  "src/cli.py",
  "src/dashboard.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
